--- a/docker/dnszeppelin-clickhouse/Dockerfile
+++ b/docker/dnszeppelin-clickhouse/Dockerfile
@@ -1,5 +1,6 @@
 FROM golang:1.8
 
+RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
 RUN apt-get update && apt-get install -y libpcap0.8-dev
 
 WORKDIR /go/src/app
